# PySYCL

./: .clang-format  .gitignore  README.md
docs/: .buildinfo  dev-guide.html  index.html  installation.html  script.js  styles.css  styles_overlay.css  user-guide.html
docs/.doctrees/: device.doctree  device_inquiry.doctree  environment.pickle  index.doctree  modules.doctree  pysycl.doctree  vector.doctree  vector_operations.doctree
docs/PySYCL_doxygen_html/: _array1_d_8h.html  _array1_d_8h__dep__incl.dot  _array1_d_8h__incl.dot  _array1_d_8h_source.html  _array1_d___python___module_8cpp.html  _array1_d___python___module_8cpp__incl.dot  _array1_d___python___module_8cpp_source.html  _array1_d___python___module_8h.html  _array1_d___python___module_8h.js  _array1_d___python___module_8h__dep__incl.dot  _array1_d___python___module_8h__incl.dot  _array1_d___python___module_8h_source.html  _array2_d_8h.html  _array2_d_8h__dep__incl.dot  _array2_d_8h__incl.dot  _array2_d_8h_source.html  _array2_d___python___module_8cpp.html  _array2_d___python___module_8cpp__incl.dot  _array2_d___python___module_8cpp_source.html  _array2_d___python___module_8h.html  _array2_d___python___module_8h.js  _array2_d___python___module_8h__dep__incl.dot  _array2_d___python___module_8h__incl.dot  _array2_d___python___module_8h_source.html  _array_8h.html  _array_8h.js  _array_8h__dep__incl.dot  _array_8h__incl.dot  _array_8h_source.html  _array___python___module_8cpp.html  _array___python___module_8cpp__incl.dot  _array___python___module_8cpp_source.html  _array___python___module_8h.html  _array___python___module_8h.js  _array___python___module_8h__dep__incl.dot  _array___python___module_8h__incl.dot  _array___python___module_8h_source.html  _bit___manipulation___functions_8h.html  _bit___manipulation___functions_8h.js  _bit___manipulation___functions_8h__dep__incl.dot  (+273 more)
docs/PySYCL_doxygen_html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+20 more)
docs/PySYCL_sphinx_html/: .buildinfo  array2D.html  array_1d.html  array_2d.html  data_types.html  device.html  fft.html  genindex.html  index.html  linalg.html  matrix.html  modules.html  objects.inv  py-modindex.html  pysycl.html  search.html  searchindex.js  vector.html
docs/PySYCL_sphinx_html/.doctrees/: array2D.doctree  array_1d.doctree  array_2d.doctree  data_types.doctree  device.doctree  environment.pickle  fft.doctree  index.doctree  linalg.doctree  matrix.doctree  modules.doctree  pysycl.doctree  vector.doctree
docs/PySYCL_sphinx_html/_sources/: array2D.rst.txt  array_1d.rst.txt  array_2d.rst.txt  device.rst.txt  linalg.rst.txt  modules.rst.txt  pysycl.rst.txt  vector.rst.txt
docs/PySYCL_sphinx_html/_static/: copybutton.js
docs/_static/css/: css-style.css
docs/install_documentation/: install.html
docs/main_documentation/: main_page.html
doxygen/: Doxyfile  doxygen.bib  doxygen_extra.dox  doxygen_mainpage.md
samples/Benchmarks/: fft1d.py
samples/Device/: device_instance.py
samples/Fast_Fourier_Transform/: fft1d.py
samples/General/: trace.py
samples/Linear_Algebra/: matrix_multiplication.py
samples/Matrix/: addition.py  division.py  fill.py  multiplication.py  numpy_constructor.py  reductions.py  subtraction.py
samples/Vector/: numpy_constructor.py
samples/device/: device.py  device_inquiry.py  device_instance.py
samples/tensor/: tensor_1d.py  tensor_base.py  tensor_factories.py  tensor_functions.py
samples/utilities/: device_inquiry.py
sphinx/: conf.py  data_types.rst  fft.rst  index.rst  matrix.rst  modules.rst  pysycl.rst
sphinx/_build/: .buildinfo  device.html  genindex.html  guide.html  index.html  modules.html  objects.inv  py-modindex.html  pysycl.html  search.html  searchindex.js  vector.html
sphinx/_build/.doctrees/: device.doctree  environment.pickle  guide.doctree  index.doctree  modules.doctree  pysycl.doctree  vector.doctree
sphinx/_build/_sources/: guide.rst.txt  modules.rst.txt  pysycl.rst.txt
src/: CMakeLists.txt  test_suite.cpp
src/Bit_Manipulation/: Bit_Manipulation_Functions.h
src/CMake/: BuildType.cmake  Doxygen.cmake  GTest.cmake  PyBind11.cmake  Sphinx.cmake
src/Data_Types/: CMakeLists.txt  Data_Types.h  Data_Types_Python_Module.cpp  Data_Types_Python_Module.h  Data_Types_Tests.cpp
src/Device/: CMakeLists.txt  Device.h  Device_Inquiry.h  Device_Inquiry_Python_Module.h  Device_Inquiry_Tests.cpp  Device_Instance.h  Device_Instance_Python_Module.h  Device_Instance_Tests.cpp  Device_Python_Module.cpp  Device_Tests.cpp
src/Fast_Fourier_Transform/: CMakeLists.txt  FFT_1D.h  FFT_1D_Python_Module.h  FFT_1D_Python_Tests.py  Fast_Fourier_Transform_Python_Module.cpp
src/General/: CMakeLists.txt  General_Python_Module.cpp  Trace.h  Trace_Python_Module.h  Trace_Python_Tests.py
src/Linear_Algebra/: CMakeLists.txt  Linear_Algebra_Python_Module.cpp  Matrix_Multiplication.h  Matrix_Multiplication_Python_Module.h  Matrix_Multiplication_Python_Tests.py  Matrix_Operations.h  Matrix_Operations_Tests.cpp  Vector_Operations.h  Vector_Operations_Tests.cpp
src/Math/: Constants.h
src/Matrix/: Matrix_Factories.h  Matrix_Factories_Python_Module.h  Matrix_Python_Module.cpp  Matrix_Python_Tests.py  Matrix_Type.h  Matrix_Type_Python_Module.h
src/Tensor/: CMakeLists.txt  Tensor.h  Tensor_Factories.h  Tensor_Python_Module.cpp  Tensor_Tests.cpp  Tensor_Types_Python_Module.cpp
src/Utilities/: CMakeLists.txt  Device_Inquiry.h  Device_Inquiry_Python_Module.h  Device_Inquiry_Tests.cpp  Generate_Vectors.h  Utilities_Python_Module.cpp
src/Vector/: Vector_Factories.h  Vector_Factories_Python_Module.h  Vector_Python_Tests.py  Vector_Type.h  Vector_Type_Python_Module.h
(+4 files in other folders)
